parsers/tree-sitter-minizinc/grammar.js
		source_file: ($) => sepBy(";", field("item", $._item)),

		_item: ($) =>
			choice(
				$.annotation,
				$.assignment,
				$.constraint,
				$.declaration,
				$.enumeration,
				$.function_item,
				$.goal,
				$.include,
				$.output,
				$.predicate,
				$.type_alias
			),

		assignment: ($) =>
			seq(
				field("name", $._identifier),
				"=",
				field("definition", $._expression)
			),

		constraint: ($) =>
			seq(
				"constraint",
				optional($._annotation_list),
				field("expression", $._expression)
			),

		declaration: ($) =>
			seq(
				field("type", $._type),
				":",
				field("name", $._pattern),
				optional($._annotation_list),
				optional(seq("=", field("definition", $._expression)))
			),

		_annotation_list: ($) =>
			seq(
				repeat1(
					prec.left(
						PREC.annotation,
						seq("::", field("annotation", $._unannotated_expression))
					)
				)
			),

		_parameters: ($) =>
			seq("(", sepBy(",", field("parameter", $.parameter)), ")"),
		parameter: ($) =>
			seq(
				field("type", $._type),
				optional(
					seq(":", field("name", $._pattern), optional($._annotation_list))
				)
			),

		_expression: ($) =>
			choice($._unannotated_expression, $.annotated_expression),
		_unannotated_expression: ($) =>
			choice(
				$._literal,

				$.array_comprehension,
				$.if_then_else,
				$.infix_operator,
				$.case_expression,
				$.lambda,
				$.let_expression,
				$.prefix_operator,
				$.postfix_operator,
				$.set_comprehension,
				$.string_interpolation,
				$._callable
			),
		_callable: ($) =>
			choice(
				$.inversed_identifier,
				$._identifier,
				$.call,
				$.generator_call,
				$.indexed_access,
				$.tuple_access,
				$.record_access,
				$.parenthesised_expression
			),

		parenthesised_expression: ($) =>
			seq("(", field("expression", $._expression), ")"),

		array_comprehension: ($) =>
			seq(
				"[",
				optional(seq(field("index", $._expression), ":")),
				field("template", $._expression),
				"|",
				sepBy1(",", field("generator", $._generator)),
				"]"
			),

		call: ($) =>
			prec(
				PREC.call,
				seq(
					field("function", $._callable),
					"(",
					sepBy(",", field("argument", $._expression)),
					")"
				)
			),

		generator_call: ($) =>
			prec(
				PREC.call,
				seq(
					field("function", $._callable),
					"(",
					sepBy1(",", field("generator", $._generator)),
					")",
					"(",
					field("template", $._expression),
					")"
				)
			),

		_generator: ($) => choice($.generator, $.assignment_generator),
		generator: ($) =>
			seq(
				sepBy1(",", field("name", $._pattern)),
				"in",
				field("collection", $._expression),
				optional(seq("where", field("where", $._expression)))
			),
		if_then_else: ($) =>
			seq(
				"if",
				field("condition", $._expression),
				"then",
				field("result", $._expression),
				repeat(
					seq(
						"elseif",
						field("condition", $._expression),
						"then",
						field("result", $._expression)
					)
				),
				optional(seq("else", field("else", $._expression))),
				"endif"
			),

		indexed_access: ($) =>
			prec(
				PREC.call,
				seq(
					field("collection", $._unannotated_expression),
					"[",
					sepBy1(
						",",
						field("index", choice(...RANGE_OPERATORS, $._expression))
					),
					"]"
				)
			),

		tuple_access: ($) =>
			prec(
				PREC.call,
				seq(
					field("tuple", $._unannotated_expression),
					".",
					field("field", alias(/[1-9][0-9]*/, $.integer_literal))
				)
			),

		record_access: ($) =>
			prec(
				PREC.call,
				seq(
					field("record", $._unannotated_expression),
					".",
					field("field", $._identifier)
				)
			),

		infix_operator: ($) => {
			const table = /** @type {const} */ ([
				[prec.left, PREC.equivalence, choice(...EQUIVALENCE_OPERATORS)],
				[prec.left, PREC.implication, choice(...IMPLICATION_OPERATORS)],
				[prec.left, PREC.disjunction, choice(...DISJUNCTION_OPERATORS)],
				[prec.left, PREC.conjunction, choice(...CONJUNCTION_OPERATORS)],
				[nonAssoc, PREC.comparative, choice(...COMPARISON_OPERATORS)],
				[prec.left, PREC.union_or_diff, choice(...UNION_DIFF_OPERATORS)],
				[prec.left, PREC.intersect, choice(...INTERSECTION_OPERATORS)],
				[nonAssoc, PREC.range, choice(...RANGE_OPERATORS)],
				[prec.left, PREC.additive, choice(...ADDITIVE_OPERATORS)],
				[prec.left, PREC.multiplicative, choice(...MULTIPLICATIVE_OPERATORS)],
				[prec.right, PREC.exponent, "^"],
				[prec.left, PREC.default, "default"],
			])

			return choice(
				...table.map(([assoc, precedence, operator]) =>
					assoc(
						precedence,
						seq(
							field("left", $._expression),
							field("operator", operator),
							field("right", $._expression)
						)
					)
				)
			)
		},

		annotated_expression: ($) =>
			prec(
				PREC.annotation,
				seq(
					field("expression", $._unannotated_expression),
					repeat1(
						prec.left(
							PREC.annotation,
							seq("::", field("annotation", $._unannotated_expression))
						)
					)
				)
			),

		case_expression: ($) =>
			seq(
				"case",
				field("expression", $._expression),
				"of",
				sepBy1(",", field("case", $.case_expression_case)),
				"endcase"
			),
		case_expression_case: ($) =>
			seq(field("pattern", $._pattern), "=>", field("value", $._expression)),

		lambda: ($) =>
			seq(
				"lambda",
				optional(seq(field("return_type", $._type), ":")),
				$._parameters,
				"=>",
				field("body", $._expression)
			),

		let_expression: ($) =>
			seq(
				"let",
				"{",
				field(
					"let",
					sepBy(
						choice(",", ";"),
						field("item", choice($.declaration, $.constraint))
					)
				),
				"}",
				"in",
				field("in", $._expression)
			),

		prefix_operator: ($) =>
			choice(
				prec(
					PREC.unary,
					seq(
						field("operator", choice("-", "not", "¬")),
						field("operand", $._expression)
					)
				),
				// TODO: Could be nonassoc, will always give type error
				prec.left(
					PREC.range,
					seq(
						field("operator", choice(...RANGE_OPERATORS)),
						field("operand", $._expression)
					)
				)
			),

		postfix_operator: ($) =>
			// TODO: Could be nonassoc, will always give type error
			prec.right(
				PREC.range,
				seq(
					field("operand", $._expression),
					field("operator", choice(...RANGE_OPERATORS))
				)
			),

		set_comprehension: ($) =>
			seq(
				"{",
				field("template", $._expression),
				"|",
				sepBy1(",", field("generator", $._generator)),
				"}"
			),

		// TODO: Decide if string_literal and string_interpolation should be combined
		string_interpolation: ($) =>
			seq(
				'"',
				optional(field("item", alias($._string_content, "string"))),
				repeat1(
					seq(
						"\\(",
						field("item", alias($._expression, "expression")),
						")",
						optional(field("item", alias($._string_content, "string")))
					)
				),
				'"'
			),

		_type: ($) =>
			choice(
				$.array_type,
				$.set_type,
				$.tuple_type,
				$.record_type,
				$.operation_type,
				$.type_base,
				$.any_type,
				$.list_type
			),
		type_base: ($) =>
			choice(
				seq(
					optional(field("var_par", choice("var", "par"))),
					optional(field("opt", "opt")),
					field(
						"domain",
						choice(
							$.primitive_type,
							$.type_inst_id,
							$.type_inst_enum_id,
							$._expression
						)
					)
				),
				seq(field("any", "any"), field("domain", $.type_inst_id))
			),
		primitive_type: ($) => choice(...primitive_types),
		anonymous: ($) => "_",
		array_literal: ($) =>
			seq("[", sepBy(",", field("member", $.array_literal_member)), "]"),
		array_literal_member: ($) =>
			seq(
				optional(seq(field("index", $._expression), ":")),
				field("value", $._expression)
			),
		boolean_literal: ($) => choice("true", "false"),
		float_literal: ($) =>
			token(
				choice(
					/\d+\.\d+/,
					/\d+(\.\d+)?[Ee][+-]?\d+/,
					/0[xX]([0-9a-fA-F]*\.[0-9a-fA-F]+|[0-9a-fA-F]+\.?)[pP][+-]?[0-9]+/
				)
			),
		integer_literal: ($) =>
			token(choice(/[0-9]+/, /0x[0-9a-fA-F]+/, /0b[01]+/, /0o[0-7]+/)),
		string_literal: ($) => seq('"', optional($._string_content), '"'),
		_string_content: ($) =>
			repeat1(field("content", choice($.string_characters, $.escape_sequence))),
		string_characters: ($) => token.immediate(prec(1, /[^"\n\\]+/)),
		tuple_literal: ($) =>
			seq(
				"(",
				field("member", $._expression),
				",",
				sepBy(",", field("member", $._expression)),
				")"
			),
		identifier: ($) => /[\p{L}_][\p{L}\p{N}_]*/u,
		quoted_identifier: ($) => /'[^']*'/,
		_identifier: ($) => choice($.identifier, $.quoted_identifier),

		_pattern: ($) =>
			choice(
				$._identifier,
				$.absent,
				$.anonymous,
				$.boolean_literal,
				$.string_literal,
				$.pattern_numeric_literal,
				$.pattern_call,
				$.pattern_tuple,
				$.pattern_record
			),
		pattern_numeric_literal: ($) =>
			seq(
				optional(field("negative", "-")),
				field("value", choice($.integer_literal, $.float_literal, $.infinity))
			),
		pattern_call: ($) =>
			seq(
				field("identifier", $._identifier),
				"(",
				sepBy(",", field("argument", $._pattern)),
				")"
			),
		pattern_tuple: ($) =>
			seq(
				"(",
				field("field", $._pattern),
				",",
				sepBy(",", field("field", $._pattern)),
				")"
			),
		pattern_record: ($) =>
			seq("(", sepBy1(",", field("field", $.pattern_record_field)), ")"),
		pattern_record_field: ($) =>
			seq(field("name", $._identifier), ":", field("value", $._pattern)),

		line_comment: ($) => token(seq("%", /.*/)),
